<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Info -->
    <string name="API_url">http://36.232.88.50:8080</string>
    <string name="app_name">Yunscoo</string>
    <string name="app_description1">Welcome to Yunscoo</string>
    <string name="app_description2">Join the most most convenient transportation</string>
    <string name="app_description3">method in Yuntech.</string>
    <string name="app_description4">Join yunscoo to enjoy</string>
    <string name="app_description5">e-scooter</string>

    <!-- Menu -->
    <string name="profile_button_text">Profile</string>
    <string name="payment_button_text">Payment</string>
    <string name="rent_record_button_text">Rent Record</string>
    <string name="nearest_button_text">Nearest</string>

    <!-- Profile -->
    <string name="person_name">Stave Torn</string>
    <string name="person_info">Personal discount available</string>
    <string name="profile_log_out_text">Log Out</string>

    <!-- Scooter Info -->
    <string name="scooter_model">Yunscoo1</string>
    <string name="scooter_id">NYKD-114514</string>

    <!-- Rent Record -->
    <string name="rent_record_number">#NMSL-7414</string>
    <string name="rent_record_time">2021/5/16 11:25</string>
    <string name="return_record_time">2021/5/16 12:10</string>
    <string name="no_record_info_text">No Records</string>

    <!-- Fee Info -->
    <string name="fee_text">fee per/min</string>
    <string name="rent_time_text">renting time</string>
    <string name="fee_image">$ </string>
    <string name="total_fee_image">$</string>
    <string name="fee">10</string>
    <string name="total_fee">201</string>
    <string name="rent_time">100</string>
    <string name="rent_time_unit">min</string>
    <string name="total_fee_text">total fee</string>

    <!-- Distance & Battery -->
    <string name="battery_time_unit">%</string>
    <string name="distance_text">4</string>
    <string name="battery_time_text">10</string>
    <string name="max_speed_text">24</string>
    <string name="max_speed_unit">mph</string>

    <!-- Payment -->
    <string name="add_card_text">Add a new credit/debit card</string>
    <string name="fragment_return_successful_payment_method_text">payment method</string>
    <string name="fragment_return_successful_payment_method">credit card</string>
    <string name="fragment_return_successful_payment_method_member">member card</string>
    <string name="fragment_return_successful_payment_total_fee_text">Total fee</string>

    <!-- Dialogs -->
    <string name="dialog_menu_rent_info_rent_fee">$0.8</string>
    <string name="dialog_menu_rent_info_rent_fee_unit">/min</string>
    <string name="dialog_menu_rent_info_button_text">Rent</string>
    <string name="dialog_unbinding_credit_card_cancel_text">Cancel</string>
    <string name="dialog_unbinding_credit_card_unbind_text">Unbind</string>
    <string name="dialog_person_info_edit_profile_cancel_text">Cancel</string>
    <string name="dialog_person_info_edit_profile_confirm_button_text">Confirm</string>
    <string name="dialog_menu_scooter_info_return_button_text">Return</string>
    <string name="dialog_menu_scooter_info_park_button_text">Park</string>

    <!-- Login -->
    <string name="account_login">Account Information</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="account_information">Account Information</string>
    <string name="invalid_input">Invalid input. Please check your username and password.</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_user_name">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_up">Signup</string>
    <string name="action_continue">Continue</string>
    <string name="welcome">"Welcome!"</string>
    <string name="prompt_select_option">User Identity</string>
    <string name="prompt_card_number">Card Number</string>
    <string name="prompt_vaild_thru">Valid Thru</string>
    <string name="prompt_user_cvv">CVV</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Fragment Return Successful -->
    <string name="fragment_return_successful_title_text">Thanks for riding</string>

    <!-- Spinner Options -->
    <string-array name="spinner_options">
        <item>User Identity</item>
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>
